<resources>
    <string name="app_name">Word Guessing Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_text">Let\'s\n Guess Words</string>
    <string name="couple_play">Couple Play</string>
    <string name="single_play">Single Play</string>

    <string name="word_guessing_game">Word Guessing Game</string>
    <string name="word_description">Word\nDescription</string>
    <!--Double Play Fragment    -->
    <string name="couple_label">Couple Play</string>
    <string name="single_label">Single Play</string>
    <string name="word_tittle">The word is</string>
    <string name="word">Word</string>
    <string name="score">Score: %1$d</string>
    <string name="skip_button">Skip</string>
    <string name="correct_button">Correct</string>
    <!--Game Over Fragment -->
    <string name="game_over">Game Over</string>
    <string name="playAgain_button">Play Again</string>
    <string name="guess">My Guess</string>
    <string name="guess_text">Enter your guess</string>
    <!--Game Instruction  fragment-->
    <string name="game_instruction">Instructions</string>
    <string name="couple_play_instruction">Hold your phone horizontally and its back camera toward you while its front toward your parner. Your partner has to look at the text from the screen and describe its in a way that you can guess the word correctly. Each correct guess is worth 1 point and the game is over after 2 minutes.</string>
    <string name="single_play_instruction">You have to guess and enter the correct word based on the brief describtion displayed on the screen. Each correct answer is worth 1 point and the game ends after 2 minutes.</string>

    <!--Add Word  Fragment-->
    <string name="add_title">Add More Words</string>
    <string name="enter_word">Enter word</string>
    <string name="enter_word_description">Enter word description</string>
    <string name="add_button">Add Word</string>

</resources>