<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".title.AddWordFragment">

        <TextView
            android:id="@+id/addTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/add_title"
            style="@style/FontText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_word"
            app:layout_constraintEnd_toEndOf="@+id/addTitle"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/addTitle"
            app:layout_constraintTop_toBottomOf="@+id/addTitle" />

        <EditText
            android:id="@+id/editTextDecription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_word_description"
            app:layout_constraintEnd_toEndOf="@+id/editTextWord"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextWord"
            app:layout_constraintTop_toBottomOf="@+id/editTextWord" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="20dp"
            android:layout_marginTop="52dp"
            android:text="@string/add_button"
            app:layout_constraintEnd_toEndOf="@+id/editTextDecription"
            app:layout_constraintStart_toStartOf="@+id/editTextDecription"
            app:layout_constraintTop_toBottomOf="@+id/editTextDecription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
